--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
 
 name: build
 
+env:
+    COMPOSER_IGNORE_PLATFORM_REQS: php
+
 jobs:
     tests:
         name: PHP ${{ matrix.php }}-coding-standards
@@ -51,7 +54,7 @@ jobs:
                   restore-keys: ${{ runner.os }}-composer-
 
             - name: Install dependencies with Composer
-              run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader
+              run: composer install --prefer-dist --no-interaction --no-progress --optimize-autoloader
 
             - name: Run tests with PhpUnit
               run: vendor/bin/phpunit $PHPUNIT_FLAGS
