Downgrade packages to run on php5.6
Set platform to php5.6 to ensure only php5.6 compatible packages are
installed. This isn't ideal because packages that are not compatible
with newer php can get installed, but it works for now.

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
         }
     },
     "config": {
+        "platform": {
+            "php": "5.6"
+        },
         "allow-plugins": {
             "cweagans/composer-patches": true
         }
